pushing incomplete music functionality for settings

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,29 +1,27 @@
 /AlienShot.class
-/Boss$attack.class
 /Boss.class
 /Bullets/
 /Displayable.class
+/DoubleShot.class
 /Enemy.class
+/EnemyPack.class
 /GButton.class
 /GParagraph.class
 /GraphicsPane.class
 /Images/
 /Interfaceable.class
 /KeyHandler.class
-/LevelFive.class
-/LevelFour.class
-/LevelOne.class
-/LevelTwo.class
+/Leaderboard.class
 /MainApplication.class
 /MainGame.class
 /MenuPane.class
-/MultipleShot.class
 /Player.class
-/PowerShot.class
+/PowerNoneShot.class
 /PowerType.class
 /Projectile.class
 /Settings.class
-/SomePane.class
 /Sounds/
+/TransitionPane.class
+/TripleShot.class
 /WelcomePane.class
-/EnemyPack.class
+/MusicPlayer.class
